# advent-of-code-2018

./: Cargo.toml
inputs/: day09.txt  day21-notes.txt
outputs/: day06-example.txt  day06.txt  day07.txt  day08.txt  day10.txt  day12b-example.txt  day12b.txt  day16.txt
src/: sweep.rs
